--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.49.2",
+    "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-config": "^1.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
